# Reasoning-Autoregressive-Modeling

./: .bib_cache.json  .gitignore  README.md  fetch_arxiv_comments.py  pyproject.toml  requirements.txt  setup.py
configs/: template.yml
configs/ModelLearn/: main.yml  model.yml
configs/PreExp/: c3_original.yml  c3_original_ds.yml  ed_original.yml  eqd_hierarchical.yml  eqd_scales.yml  eqd_token_level.yml  zero2.json
configs/c3/: config.yaml  zero2.json
configs/ed/: config.yaml
configs/eqd_hierarchical/: config.yaml
configs/eqd_scales/: config.yaml  zero2.json
configs/eqd_token_level/: config.yaml
configs/nlcp/: main.yml  model.yml  training.yml
configs/nlcp_ablation/: model_original.yml  model_reinforce.yml
configs/nlcp_base/: main.yml  model.yml  training.yml
configs/text_tar/: default.yml  small.yml
configs/text_var/: default.yml  small.yml
configs/uTEST/: decoder.yml  ed_train.yml  encoder.yml  eqd_train.yml  quantizer.yml
data/: train-demo-samples.json
docs/: VAR.md  c3.md  challenge.md  concept-pyramid-V1.md  concept-pyramid-V2.md  concept-pyramid-V3-1.md  concept-pyramid-V3.md  concept-pyramid-critic.md  concept-pyramid-nlcp.md  concept-pyramid.md  create-bib-skill.md  create-related-work-skills.md  deepspeed-rules.md  discuss.md  dlcm.md  exp-setup.md  losses.md  neurips-writing.md  reference.md  related-work.bib  related-work.md  work-summary.md
docs/create-related-work-skills/: 00-user-define.md  01-search-prepare.md  02-search-execute.md  03-paper-reading.md  (+3 more)
examples/: scp-server.md
ram/: __init__.py  data_load.py  generic.py
(+678 files in other folders)
